crates/sutura-app/tests/snapshots/catalog_knowledge@wren.snap
---
source: crates/sutura-app/tests/golden/catalogs.rs
expression: pinned.knowledge()
---
declares:
  - glossary
  - caveats
  - absences
  - examples
glossary: {}
caveats: {}
absences: {}
examples: {}
