crates/sutura-app/tests/snapshots/leg_fact-decomposed-average.snap
---
source: crates/sutura-app/tests/golden/legs.rs
expression: leg
---
fact:
  source: local
  metric: mean_subscription_mrr
  table: fct_subscription_monthly
  joins: []
  bucket:
    label: period
    grain: month
    column:
      table: fct_subscription_monthly
      column: month
  keys:
    - label: 0_link
      column:
        table: fct_subscription_monthly
        column: customer_key
  terms:
    - term:
        aggregate:
          aggregate: sum
          column:
            table: fct_subscription_monthly
            column: mrr_cents
      label: 0_leaf_0
    - term:
        aggregate:
          aggregate: count
          column:
            table: fct_subscription_monthly
            column: mrr_cents
      label: 0_leaf_1
  filters:
    - origin: definition
      predicate:
        at_or_after:
          column:
            table: fct_subscription_monthly
            column: month
          param: 0
    - origin: definition
      predicate:
        before:
          column:
            table: fct_subscription_monthly
            column: month
          param: 1
    - origin: definition
      predicate:
        equals:
          column:
            table: fct_subscription_monthly
            column: status
          param: 2
  params:
    - Date: 2026-06-01
    - Date: 2026-07-01
    - Text: active
  range:
    start: 2026-06-01
    end: 2026-07-01
