crates/sutura-app/tests/snapshots/leg_fact-distinct-keys.snap
---
source: crates/sutura-app/tests/golden/legs.rs
expression: leg
---
fact:
  source: local
  metric: active_subscriptions
  table: fct_subscription_monthly
  joins: []
  bucket:
    label: period
    grain: month
    column:
      table: fct_subscription_monthly
      column: month
  keys:
    - label: customer_key
      column:
        table: fct_subscription_monthly
        column: customer_key
    - label: subscription_key
      column:
        table: fct_subscription_monthly
        column: subscription_key
  terms: []
  filters:
    - origin: definition
      predicate:
        at_or_after:
          column:
            table: fct_subscription_monthly
            column: month
          param: 0
    - origin: definition
      predicate:
        before:
          column:
            table: fct_subscription_monthly
            column: month
          param: 1
    - origin: definition
      predicate:
        equals:
          column:
            table: fct_subscription_monthly
            column: status
          param: 2
  params:
    - Date: 2026-06-01
    - Date: 2026-07-01
    - Text: active
  range:
    start: 2026-06-01
    end: 2026-07-01
