crates/sutura-app/tests/snapshots/leg_fact-sum-over-a-local-join.snap
---
source: crates/sutura-app/tests/golden/legs.rs
assertion_line: 326
expression: leg
---
fact:
  source: local
  metric: recurring_revenue
  table: fct_subscription_monthly
  joins:
    - relationship: subscription_product
      table: dim_product
      join_type: many_to_one
      keys:
        - Equal:
            origin:
              table: fct_subscription_monthly
              column: product_key
            target:
              table: dim_product
              column: product_key
  bucket:
    label: period
    grain: month
    column:
      table: fct_subscription_monthly
      column: month
  keys:
    - label: product_family
      column:
        table: dim_product
        column: product_family
    - label: 0_link
      column:
        table: fct_subscription_monthly
        column: customer_key
  terms:
    - term:
        aggregate:
          aggregate: sum
          column:
            table: fct_subscription_monthly
            column: mrr_cents
      label: 0_leaf_0
  filters:
    - origin: definition
      predicate:
        at_or_after:
          column:
            table: fct_subscription_monthly
            column: month
          param: 0
    - origin: definition
      predicate:
        before:
          column:
            table: fct_subscription_monthly
            column: month
          param: 1
    - origin: definition
      predicate:
        equals:
          column:
            table: fct_subscription_monthly
            column: status
          param: 2
  params:
    - Date: 2026-06-01
    - Date: 2026-07-01
    - Text: active
  range:
    start: 2026-06-01
    end: 2026-07-01
