crates/sutura-app/tests/snapshots/leg_lookup-unfiltered.snap
---
source: crates/sutura-app/tests/golden/legs.rs
expression: leg
---
lookup:
  source: crm
  table: dim_customer
  joins: []
  keys:
    - label: 0_link
      column:
        table: dim_customer
        column: customer_key
    - label: region
      column:
        table: dim_customer
        column: region
  filters: []
  params: []
