crates/sutura-app/tests/snapshots/leg_two-fact-first.snap
---
source: crates/sutura-app/tests/golden/legs.rs
expression: leg
---
fact:
  source: local
  metric: tickets_per_subscription
  table: fct_subscription_monthly
  joins:
    - relationship: subscription_calendar
      table: dim_calendar
      join_type: many_to_one
      keys:
        - Equal:
            origin:
              table: fct_subscription_monthly
              column: month
            target:
              table: dim_calendar
              column: month
  bucket:
    label: period
    grain: month
    column:
      table: dim_calendar
      column: month
  keys:
    - label: 0_link
      column:
        table: fct_subscription_monthly
        column: customer_key
  terms:
    - term:
        aggregate:
          aggregate: count
          column:
            table: fct_subscription_monthly
            column: subscription_key
      label: 0_leaf_1
  filters:
    - origin: definition
      predicate:
        at_or_after:
          column:
            table: dim_calendar
            column: month
          param: 0
    - origin: definition
      predicate:
        before:
          column:
            table: dim_calendar
            column: month
          param: 1
  params:
    - Date: 2026-06-01
    - Date: 2026-07-01
  range:
    start: 2026-06-01
    end: 2026-07-01
