crates/sutura-app/tests/snapshots/qualified_plan_qualified-cross-project-join.snap
---
source: crates/sutura-app/tests/golden/qualified.rs
assertion_line: 412
expression: plan
---
source: warehouse
metric: revenue
table: analytics-prod.sales.orders
joins:
  - relationship: orders_customer
    table: reference-data.crm.customers
    join_type: many_to_one
    keys:
      - Equal:
          origin:
            table: orders
            column: customer_id
          target:
            table: customers
            column: id
bucket:
  label: period
  grain: month
  column:
    table: orders
    column: order_date
keys:
  - label: region
    column:
      table: customers
      column: region_code
measure:
  simple:
    term:
      aggregate:
        aggregate: sum
        column:
          table: orders
          column: amount_cents
measure_label: revenue
filters:
  - origin: definition
    predicate:
      at_or_after:
        column:
          table: orders
          column: order_date
        param: 0
  - origin: definition
    predicate:
      before:
        column:
          table: orders
          column: order_date
        param: 1
params:
  - Date: 2026-06-01
  - Date: 2026-07-01
range:
  start: 2026-06-01
  end: 2026-07-01
max_rows: 10000
top: ~
